codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_additional_context_limit.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e

  PreToolUse hooks
  Turn hooks on or off. Your changes are saved automatically.

  [x] Hook 1

  Event     PreToolUse
  Matcher   Bash
  Source    User config - /tmp/hooks.json
  Command   /tmp/pre-tool-use.sh
  Timeout   30s
  Context   unlimited
  Trust     Trusted

=======
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   /tmp/pre-tool-use.sh                                                                                
  Mode      Sync                                                                                                
  Timeout   30s                                                                                                 
  Context   unlimited                                                                                           
  Trust     Trusted                                                                                             
                                                                                                                
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
  Press space or enter to toggle; esc to go back
