codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_selected_managed_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e

  PreToolUse hooks
  Turn hooks on or off. Your changes are saved automatically.

  [x] Hook 1
  [x] Hook 2

  Event     PreToolUse
  Matcher   Bash
  Source    Admin config
  Command   /enterprise/hooks/pre-tool-use-2.sh
  Timeout   30s
  Trust     Managed

=======
                                                                                                                
  PreToolUse hooks                                                                                              
  Turn hooks on or off. Your changes are saved automatically.                                                   
                                                                                                                
  [x] Hook 1                                                                                                    
  [x] Hook 2                                                                                                    
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    Admin config                                                                                        
  Command   /enterprise/hooks/pre-tool-use-2.sh                                                                 
  Mode      Sync                                                                                                
  Timeout   30s                                                                                                 
  Trust     Managed                                                                                             
                                                                                                                
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
  Managed hooks are always on; press esc to go back
