codex-rs/tui/src/bottom_pane/snapshots/codex_tui__bottom_pane__hooks_browser_view__tests__hooks_browser_untrusted_enabled_handler.snap
---
source: tui/src/bottom_pane/hooks_browser_view.rs
expression: "render_lines(&view, 112)"
---
<<<<<<< f12747ca5e6eb85d32a823b9450726c76ffbb93e

  PreToolUse hooks
  1 hook needs review before it can run.

  [!] Hook 1 · new

  Event     PreToolUse
  Matcher   Bash
  Source    User config - /tmp/hooks.json
  Command   ~/bin/untrusted.sh
  Timeout   30s
  Trust     New hook - review required

=======
                                                                                                                
  PreToolUse hooks                                                                                              
  1 hook needs review before it can run.                                                                        
                                                                                                                
  [!] Hook 1 · new                                                                                              
                                                                                                                
  Event     PreToolUse                                                                                          
  Matcher   Bash                                                                                                
  Source    User config - /tmp/hooks.json                                                                       
  Command   ~/bin/untrusted.sh                                                                                  
  Mode      Async                                                                                               
  Timeout   30s                                                                                                 
  Trust     New hook - review required                                                                          
                                                                                                                
>>>>>>> 7f83d4922d7e92a36c1c1e4f61159a5815d45360
  Press t to trust; esc to go back
